# agentic-playground

./: .env.example  .gitignore  README.md  embed_books.py  langgraph.json  load_book_vectors.py  mongodb_vector_store.py  pyproject.toml  semantic_search_agent.py  test_mongodb_store.py
backend/: semantic_search_agent.py  upload_server.py  vector_storage_helpers.py  verify_index.py  webapp.py
backend/tests/: conftest.py  test_full_integration.py  test_integration.py  test_load_book_vectors.py  test_semantic_search_agent.py  test_upload_server.py
semantic-search-ui/: package-lock.json  package.json
semantic-search-ui/public/: index.html
semantic-search-ui/src/: App.css  App.js
